@@ -1,3 +1,7 @@
+[WIP]
+* --show: --noscale override to remove scaling from cmd line
+* --show: new option --var VARIABLE in order to show stats for VARIABLE instead of score
+* --show: additional "Missing" column for tests missing score (or a specified variable)
 [0.4.1]
 * separate predefined configs for topcoder/atcoder
 [0.4.0]
